	PR target/35366 	* expr.c (expand_expr_addr_expr_1): If EXP needs bigger alignment 	than INNER and INNER is a constant, forcibly align INNER as much 	as needed.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141782 138bc75d-0d04-0410-961f-82ee72b054a4